cdebconf (0.55) UNRELEASED; urgency=low

  * Denis Barbier
    - The confmodule_update_seen_questions function was broken, only
      one question was added/removed to the stack of already seen
      questions.

  * Translations:
    - Eugen Meshcheryakov : added Ukrainian translation (uk.po)

 -- Denis Barbier <barbier@debian.org>  Sun,  8 Feb 2004 21:55:32 +0100

cdebconf (0.54) unstable; urgency=low

  * Martin Sjögren
    - Make the METAGET command return translated fields. This should fix
      the "Create %s file system" problem in partconf. (Closes: #224493)
  * Denis Barbier
    - Steal code from debconf to go back over skipped questions.
      Closes: #225861, #229719
    - As locales are not installed during early stage of installation,
      sorting cannot be performed at run-time, and templates must
      contain sorting order.  Thus the Listorder fields is removed and
      replaced by a new Indices field.  If a template contains
        Choices: a, b, c
        Choices-ll.UTF-8: x, y, z
        Indices-ll.UTF-8: 3, 1, 2
      this means that 'a' is translated into 'x', 'b' into 'y' and 'c'
      into 'z' for the language 'll', but "z, x, y" is displayed in that
      order.
    - If frontend is set to 'none', a dummy frontend is initialized.
      This can be useful in conjunction with debconf-communicate, e.g.
      to fix #223344.
    - Only newt and text frontends are currently supported.  Do not
      build other packages (neither debs nor udebs), and strip build
      dependencies.
      The dependency problem caused by cdebconf-gtk-udeb goes away,
      and a solution is worked on in case this frontend is back later
      (which is the reason why these entries are not removed from
      debian/control), so there is no need to keep this bugreport open.
      Closes: #218472
  * Bastian Blank
    - Fix progress bar calculations in newt frontend.

  * Updated translations:
    - Anmar Oueja
      - created and translated to Arabic (ar.po)