@@ -4,6 +4,7 @@ cdebconf (0.55) UNRELEASED; urgency=low
     - The confmodule_update_seen_questions function was broken, only
       one question was added/removed to the stack of already seen
       questions.
+    - Always display templates of type 'error'.
 
   * Translations:
     - Eugen Meshcheryakov : added Ukrainian translation (uk.po)
